ft: find by id + validate existing user by cnpj
